# PredMe_WIP

./: .gitignore  README.md  build_cpp.sh  example.env.txt  pyproject.toml
_assets/: kalshi.txt  polymarket.txt
cpp/orderbook/: CMakeLists.txt  bindings.cpp  orderbook_core.cpp  orderbook_core.hpp  server_state_cpp.cpp  server_state_cpp.hpp
server/: README.md  __init__.py  kalshi_client.py  kalshi_tickerv2_dtypes.py  main.py  polymarket_client.py  polymarket_wss_dtypes.py  server_internal_dtypes.py  websocket_handlers.py
server/.old/: OrderBook.py  server_state.py
